<resources>
    <string name="app_name">Just Java</string>
        
    <string name="toppings">Toppings</string>
    <string name="wipped_cream">Add Whippedcream </string>
    <string name="chocolate">Add Chocolate </string>
    <string name="quantity">QUANTITY </string>
    <string name="price">Price </string>
    <string name="order">Order</string>
    <string name="thank_you">Thank You!</string>
    <string name="name">Name</string>
    <string name="total">Total</string>
    
</resources>